<resources>
    <string name="app_name">115LabProject</string>
    <string name="back">BACK</string>
    <string name="make_sure_you_always_remove_your_makeup_before_hitting_the_sheets_the_skin_needs_to_breathe_overnight_and_makeup_prevents_that_as_leaving_it_on_overnight_clogs_the_pores_which_may_cause_blemishes_and_or_blackheads_put_some_olive_oil_on_a_cotton_pad_and_gently_massage_the_oil_onto_your_face_to_get_rid_of_the_makeup_and_dirt">--Make sure you always remove your makeup before hitting the sheets. The skin needs to breathe overnight. And makeup prevents that, as leaving it on overnight clogs the pores which may cause blemishes and/or blackheads. Put some olive oil on a cotton pad and gently massage the oil onto your face to get rid of the makeup and dirt.</string>
    <string name="do_s">DO\'s</string>
    <string name="_1_the_golden_rule">1) The Golden Rule</string>
    <string name="next">NEXT</string>
    <string name="todo">TODO</string>
    <string name="do_s1">DO\'s</string>
    <string name="_2_sun_and_skin">2) Sun and Skin</string>
    <string name="apply_sunscreen_with_spf_of_at_least_15_that_blocks_both_uva_and_uvb_rays_since_a_lifetime_of_sun_exposure_can_cause_wrinkles_age_spots_and_other_skin_problems_you_have_to_protect_your_skin_from_the_sun_make_sure_the_label_reads_noncomedogenic_or_nonacnegenic_so_that_the_product_does_not_tend_to_block_pores">--Apply sunscreen with SPF of at least 15 that blocks both UVA and UVB rays. Since a lifetime of sun exposure can cause wrinkles, age spots and other skin problems, you have to protect your skin from the sun. Make sure the label reads ‘noncomedogenic’ or ‘nonacnegenic’ so that the product does not tend to block pores.</string>
    <string name="todo2">TODO2</string>
    <string name="foods_to_eat">Foods to Eat</string>
    <string name="dermaface">DermaFace++</string>
    <string name="remedies">REMEDIES</string>
    <string name="dont_s">DONT\'s</string>
    <string name="dos">DO\'s</string>
    <string name="derma1">derma1</string>
    <string name="_3_you_are_what_you_eat">3) You are What You Eat</string>
    <string name="keep_a_note_of_what_you_put_on_your_plate_eat_fresh_fruits_greens_sufficient_protein_and_vitamins_a_diet_rich_in_vitamin_c_and_low_in_fats_and_sugar_promotes_radiant_skin_consider_a_low_sugar_diet_which_can_keep_insulin_levels_down_allowing_cells_to_maintain_a_healthy_balance">--Keep a note of what you put on your plate. Eat fresh fruits, greens, sufficient protein and vitamins. A diet rich in vitamin C and low in fats and sugar promotes radiant skin. Consider a low-sugar diet, which can keep insulin levels down, allowing cells to maintain a healthy balance.</string>
    <string name="_4_sweat_it_out">4) Sweat It Out</string>
    <string name="exercise_regularly_running_jogging_and_yoga_will_give_your_body_the_necessary_blood_circulation_and_also_accelerate_the_cleansing_process_of_your_entire_body_you_will_notice_a_glow_on_your_face_after_working_out_racing_against_time_just_take_a_brisk_walk_around_the_block">--Exercise regularly. Running, jogging and yoga will give your body the necessary blood circulation, and also accelerate the cleansing process of your entire body. You will notice a glow on your face after working out. Racing against time? Just take a brisk walk around the block.</string>
    <string name="a_guide_to">A Guide to</string>
    <string name="flawless_and_unblemished_face">Flawless and Unblemished Face</string>
    <string name="lets_get_started">Lets Get Started!</string>
    <string name="back_to_home">Back to Home</string>
    <string name="try_to_sleep_at_least_8_hours_every_night_if_you_don_t_get_enough_shut_eye_your_skin_gets_tired_just_like_you_so_don_t_risk_it_you_can_also_apply_honey_on_your_face_twice_or_thrice_a_week_to_naturally_soothe_and_heal_your_skin">--Try to sleep at least 8 hours every night. If you don’t get enough shut eye, your skin gets tired just like you. So don’t risk it. You can also apply honey on your face twice or thrice a week to naturally soothe and heal your skin.</string>
    <string name="_5_beauty_sleep">5) Beauty Sleep</string>
    <string name="dermaface1">DermaFace++</string>
    <string name="finish">Finish!</string>
    <string name="dont_s1">DONT\'s</string>
    <string name="_4_forgetting_skincare_sessions">4) Forgetting skincare sessions</string>
    <string name="forget_to_wash_and_moisturize_your_face_before_going_to_bed_for_dry_skin_use_milder_cleansers_that_are_free_from_alcohol_apply_lots_of_moisturizer_and_avoid_hot_water_as_it_dries_out_the_skin_excessively">--Forget to wash and moisturize your face before going to bed. For dry skin, use milder cleansers that are free from alcohol. Apply lots of moisturizer, and avoid hot water as it dries out the skin excessively.</string>
    <string name="dont_s2">DONT\'s</string>
    <string name="_3_ignoring_skincare_sessions">3) Ignoring skincare sessions</string>
    <string name="skip_skincare_before_and_after_a_workout_apply_a_toner_to_help_minimize_oil_production_before_heading_out_exfoliate_after_and_then_apply_shea_butter_or_olive_oil_to_moisturize_the_skin">--Skip skincare before and after a workout. Apply a toner to help minimize oil production before heading out. Exfoliate after, and then apply shea butter or olive oil to moisturize the skin.</string>
    <string name="skip_the_sunscreen_whether_it_s_cloudy_or_cold_outside_no_excuses_if_you_re_heading_to_a_beach_or_around_reflective_surfaces_like_snow_or_ice_lather_your_skin_up_with_some_more_sunscreen_with_spf_of_at_least_30">--Skip the sunscreen, whether it\'s cloudy or cold outside (no excuses). If you’re heading to a beach or around reflective surfaces like snow or ice, lather your skin up with some more sunscreen with SPF of at least 30.</string>
    <string name="_5_skipping_sunscreen_sessions">5) Skipping Sunscreen sessions</string>
    <string name="dont_s3">DONT\'s</string>
    <string name="_2_dont_pop_it_out">2) Dont pop it out</string>
    <string name="pop_pimples_because_it_can_lead_to_more_swelling_redness_and_even_scarring_feel_a_pimple_is_on_its_way_just_clean_the_area_with_rose_water_and_place_a_chilled_green_tea_bag_for_10_minutes">--Pop pimples because it can lead to more swelling, redness, and even scarring. Feel a pimple is on its way? Just clean the area with rose water, and place a chilled green tea bag for 10 minutes.</string>
    <string name="dont_s5">DONT\'s</string>
    <string name="_1_avoid_excessive_stressing">1) Avoid excessive stressing</string>
    <string name="neglect_your_jawline_and_facial_muscles_for_just_5_minutes_a_day_perform_a_few_facial_exercises_you_can_jut_out_your_lower_lip_in_such_a_way_that_wrinkles_are_created_on_the_chin_then_lower_your_chin_to_your_chest">--Neglect your jawline and facial muscles. For just 5 minutes a day, perform a few facial exercises. You can jut out your lower lip in such a way that wrinkles are created on the chin, then lower your chin to your chest.</string>
    <string name="dont_s6">DONT\'S</string>
    <string name="remedies1">REMEDIES</string>
    <string name="_1_skin_astringent">1) Skin Astringent</string>
    <string name="removes_deep_seated_dirt_within_the_face_it_may_be_alcohol_or_chemically_based_and_is_used_to_clean_the_skin_and_close_pores_applying_every_night_before_sleeping_is_recommended">removes deep seated dirt within the face. It may be alcohol or chemically-based and is used to clean the skin and close pores. Applying every night before sleeping is recommended.</string>
    <string name="remedies2">REMEDIES</string>
    <string name="_2_skin_brightening_cream">2) Skin Brightening Cream</string>
    <string name="skin_whitening_is_the_use_of_substances_mixtures_or_physical_treatments_to_lighten_skin_color_skin_whitening_treatments_work_by_reducing_the_skin_s_melanin_content">--Skin whitening is the use of substances, mixtures, or physical treatments to lighten skin color. Skin whitening treatments work by reducing the skin\'s melanin content.</string>
    <string name="remedies3">REMEDIES</string>
    <string name="_3_sunblock">3) Sunblock</string>
    <string name="a_substance_that_you_put_on_your_skin_to_prevent_it_from_being_damaged_by_the_sun_that_prevents_any_of_the_sun_s_rays_from_reaching_the_skin">--a substance that you put on your skin to prevent it from being damaged by the sun, that prevents any of the sun\'s rays from reaching the skin.</string>
    <string name="remedies4">REMEDIES</string>
    <string name="_4_mild_and_gentle_soaps">4) Mild and gentle soaps</string>
    <string name="it_contains_ingredients_that_helps_the_skin_look_healthier_mild_soaps_usually_contain_ingredients_that_soothe_and_refresh_your_skin_such_as_witch_hazel_or_aloe_vera_vegetable_and_herbal_oils_such_as_evening_primrose_oil_olive_oil_or_coconut_oil">--it contains ingredients that helps the skin look healthier. Mild soaps usually contain ingredients that soothe and refresh your skin, such as: Witch hazel or aloe vera. Vegetable and herbal oils such as evening primrose oil, olive oil, or coconut oil.</string>
    <string name="remedies5">REMEDIES</string>
    <string name="_5_skin_toner">5) Skin Toner</string>
    <string name="preps_the_skin_for_moisturizers_and_serum_while_getting_rid_of_excess_oil_and_stubborn_dirt_or_makeup_leftover_on_your_face_after_you_wash_it_toners_help_to_remove_any_traces_of_oil_perspiration_or_makeup_from_your_skin">--preps the skin for moisturizers and serum, while getting rid of excess oil and stubborn dirt or makeup leftover on your face after you wash it. Toners help to remove any traces of oil, perspiration or makeup from your skin.</string>
    <string name="foods_to_eat1">FOODS TO EAT</string>
    <string name="_1_fatty_fish">1) Fatty Fish</string>
    <string name="fatty_fish_such_as_salmon_mackerel_and_herring_are_excellent_foods_for_healthy_skin_they_are_rich_sources_of_omega_3_fatty_acids_which_are_important_for_maintaining_skin_health_omega_3_fatty_acids_are_necessary_to_keep_skin_thick_supple_and_moisturized_in_fact_a_deficiency_in_omega_3_fats_can_cause_dry_skin">--Fatty fish, such as salmon, mackerel and herring, are excellent foods for healthy skin. They are rich sources of omega-3 fatty acids, which are important for maintaining skin health. Omega-3 fatty acids are necessary to keep skin thick, supple and moisturized. In fact, a deficiency in omega-3 fats can cause dry skin.</string>
    <string name="foods_to_eat2">FOODS TO EAT</string>
    <string name="_2_broccoli">2) Broccoli</string>
    <string name="broccoli_is_full_of_many_vitamins_and_minerals_important_for_skin_health_including_zinc_vitamin_a_and_vitamin_c_it_also_contains_lutein_a_carotenoid_that_works_like_beta_carotene_lutein_protects_your_skin_from_oxidative_damage_which_can_cause_your_skin_to_become_dry_and_wrinkled">--Broccoli is full of many vitamins and minerals important for skin health, including zinc, vitamin A and vitamin C. It also contains lutein, a carotenoid that works like beta-carotene. Lutein protects your skin from oxidative damage, which can cause your skin to become dry and wrinkled.</string>
    <string name="foods_to_eat3">FOODS TO EAT</string>
    <string name="_3_tomatoes">3) Tomatoes</string>
    <string name="you_accomplished_the">You accomplished the</string>
    <string name="module">Module!</string>
    <string name="done">DONE</string>
    <string name="congratulations">CONGRATULATIONS!!!</string>
    <string name="dont_s7">DONT\'s</string>
</resources>